--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div id="enterText">
-            <p>ENTER DOJO</p>
+            <p>ENTER</p>
         </div>
         <div id="content" class="row">
             <div id="logo" class="col-12">
@@ -155,3 +155,4 @@
         <script src="script.js"></script>
     </body>
 </html>
+
