--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
         <div id="snr" class="row">
             <div class="title col-12">Schedule & Rates</div>
             <div id="schedule" class="snr col-12 col-md-12 col-lg-6">
-                <img src="assets/schedule.jpg" alt="Schedule" />
+                <img src="assets/schedule_new.jpg" alt="Schedule" />
             </div>
             <div id="rates" class="snr col-12 col-md-12 col-lg-6">
-                <img src="assets/rates.jpg" alt="Rates" usemap="#contacts" />
+                <img src="assets/rates_new.jpg" alt="Rates" usemap="#contacts" />
                 <!--
                 <map name="contacts">
                     <area shape="rect" coords="153,640,415,675" href="https://www.google.com/" alt="Aaron" />
@@ -155,4 +155,5 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
