--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Klub Houz</title>
+        <link rel="icon" type="image/x-icon" href="assets/logo.jpg" />
         <link rel="stylesheet" href="style.css" />
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
@@ -72,37 +73,25 @@
                 <div class="fighterInner">
                     <div class="fighterInfo"><img src="assets/fighter.jpg" alt="Aaron" />AARON</div>
                     <div class="fighterDetails">
-                        <p>Aaron "Nickname" Yung</p>
-                        <p>Lightweight</p>
-                        <p>3-0-0</p>
-                        <p>BJJ Purple Belt</p>
-                        <p></p>
+                        <div>Aaron "Nickname" Yung</div>
+                        <div>Lightweight</div>
+                        <div>3-0-0</div>
+                        <div>BJJ Purple Belt</div>
                     </div>
                 </div>
             </div>
 
             <div class="fighter col-12 col-md-12 col-lg-4">
                 <div class="fighterInner">
-                    <div class="fighterInfo"><img src="assets/fighter.jpg" alt="Vyner" />VYNER</div>
-                    <div class="fighterDetails">
-                        <p>Vyner "Nickname" L.Name</p>
-                        <p>Lightweight</p>
-                        <p>3-0-0</p>
-                        <p>BJJ Purple Belt</p>
-                        <p></p>
+                    <div class="fighterInfo">
+                        <img src="assets/fighter.jpg" alt="Vyner" />
+                        VYNER
                     </div>
-                </div>
-            </div>
-
-            <div class="fighter col-12 col-md-12 col-lg-4">
-                <div class="fighterInner">
-                    <div class="fighterInfo"><img src="assets/fighter.jpg" alt="Fighter" />FIGHTER</div>
                     <div class="fighterDetails">
-                        <p>F.Name "Nickname" L.Name</p>
-                        <p>Lightweight</p>
-                        <p>2-0-0</p>
-                        <p>BJJ Brown Belt</p>
-                        <p></p>
+                        <div>Vyner "Nickname" L.Name</div>
+                        <div>Lightweight</div>
+                        <div>3-0-0</div>
+                        <div>BJJ Purple Belt</div>
                     </div>
                 </div>
             </div>
@@ -111,42 +100,25 @@
                 <div class="fighterInner">
                     <div class="fighterInfo"><img src="assets/fighter.jpg" alt="Fighter" />FIGHTER</div>
                     <div class="fighterDetails">
-                        <p>F.Name "Nickname" L.Name</p>
-                        <p>Welterweight</p>
-                        <p>3-1-1</p>
-                        <p>BJJ White Belt</p>
-                        <p></p>
+                        <div>F.Name "Nickname" L.Name</div>
+                        <div>Lightweight</div>
+                        <div>2-0-0</div>
+                        <div>BJJ Brown Belt</div>
                     </div>
                 </div>
             </div>
 
-            <!--
-            <div class="fighter col-12 col-lg-4">
+            <div class="fighter col-12 col-md-12 col-lg-4">
                 <div class="fighterInner">
                     <div class="fighterInfo"><img src="assets/fighter.jpg" alt="Fighter" />FIGHTER</div>
                     <div class="fighterDetails">
-                        <p>F.Name "Nickname" L.Name</p>
-                        <p>Welterweight</p>
-                        <p>3-1-1</p>
-                        <p>BJJ White Belt</p>
-                        <p></p>
+                        <div>F.Name "Nickname" L.Name</div>
+                        <div>Lightweight</div>
+                        <div>3-1-1</div>
+                        <div>BJJ Brown Belt</div>
                     </div>
                 </div>
             </div>
-
-            <div class="fighter col-12 col-lg-4">
-                <div class="fighterInner">
-                    <div class="fighterInfo"><img src="assets/fighter.jpg" alt="Fighter" />FIGHTER</div>
-                    <div class="fighterDetails">
-                        <p>F.Name "Nickname" L.Name</p>
-                        <p>Welterweight</p>
-                        <p>3-1-1</p>
-                        <p>BJJ White Belt</p>
-                        <p></p>
-                    </div>
-                </div>
-            </div>
-            -->
         </div>
 
         <!-- Scripts -->
@@ -155,6 +127,3 @@
         <script src="script.js"></script>
     </body>
 </html>
-
-
-
